make sure that the footer background covers all children

--- a/django/crashreport/stats/static/stats/css/common.less
+++ b/django/crashreport/stats/static/stats/css/common.less
@@ -65,6 +65,7 @@ div.page-footer {
     border-top: 1px solid #bbc3c7;
     margin: 40px 0 0 0;
     padding: 10px 20px;
+    overflow: auto;
     a {
         color: @base-link-color;
         text-decoration: none;
